--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -70,8 +70,7 @@
 					wrestlers	on the
 					Roster Page. Once you
 					have your roster, you can click on the Generate Card! link to set up a list of matches for your next show,
-					randomly generated. (These are the only actual features available. The following are features the author is
-					working on). Create feuds between wrestlers, set up the schedule for your shows, and generate cards months
+					randomly generated. Updates and featurtes are being added to this app all the time In the future you will be able to:. Create feuds between wrestlers, set up the schedule for your shows, and generate cards months
 					out of your schedule. </p>
 				<p>Lack of attention to plot detail is one of the greatest problems plaguing modern American Pro Wrestling.
 					Famous Wrestling journalist Brandon Stroud of <%= link_to 'Uproxx', 'http://uproxx
