--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
 <div class="row">
 	<div class="box">
-		<div class="col-sm-8 col-sm-offset-2">
-			<table class="center">
+		<div class="col-sm-10 col-sm-offset-1">
+			<table align="center">
 			<thead>
 				<tr>
 					<th colspan=5>
@@ -13,14 +13,14 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr>
+				<tr class="main-event">
 					<td colspan="5" class="error_row">
 						<h1 class="text-center text-danger">
 							10:30 The Main EVENT
 						</h1>
 					</td>
 				</tr>
-				<tr>
+				<tr class="main-event">
 					<%unless @card.matches[0].heel.blank? || @card.matches[0].babyface.blank?  %>
 						<td class="avatar_cell_babyface">
 							<%=image_tag @card.matches[0].babyface.image.url, class: "img-responsive, avatar" %>
@@ -38,216 +38,199 @@
 							<%=image_tag @card.matches[0].heel.image.url, class: "img-responsive, avatar"%>
 						</td>
 					<%else  %>
-					<tr>
 						<td colspan="5" class="text-center error_row">
 						<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
 							turn a face heel, or turn a heel face</p>
 						</td>
-					</tr>
 					<%end  %>
-					</tr>
-					<tr>
-						<%unless @card.matches[1].heel.blank? || @card.matches[1].babyface.blank?  %>
-							<td class="avatar_cell_babyface">
-								<%=image_tag @card.matches[1].babyface.image.url, class: "img-responsive, avatar" %>
-							</td>
-							<td class="wrestler_name_babyface">
-								<h2 class="text-danger"><u><%=@card.matches[1].babyface.name %></u></h2>
-							</td>
-							<td class="vs">
-								<h2>         VS.       </h2>
-							</td>
-							<td class="wrestler_name_heel">
-								<h2 class="text-danger"><u><%=@card.matches[1].heel.name %></u></h2>
-							</td>
-							<td class="avatar_cell_heel">
-								<%=image_tag @card.matches[1].heel.image.url, class: "img-responsive, avatar"%>
-							</td>
-						<%else  %>
-						<tr>
-							<td colspan="5" class="text-center error_row">
+				</tr>
+				<tr class="high-card">
+					<%unless @card.matches[1].heel.blank? || @card.matches[1].babyface.blank?  %>
+						<td class="avatar_cell_babyface">
+							<%=image_tag @card.matches[1].babyface.image.url, class: "img-responsive, avatar" %>
+						</td>
+						<td class="wrestler_name_babyface">
+							<h2 class="text-danger"><u><%=@card.matches[1].babyface.name %></u></h2>
+						</td>
+						<td class="vs">
+							<h2>         VS.       </h2>
+						</td>
+						<td class="wrestler_name_heel">
+							<h2 class="text-danger"><u><%=@card.matches[1].heel.name %></u></h2>
+						</td>
+						<td class="avatar_cell_heel">
+							<%=image_tag @card.matches[1].heel.image.url, class: "img-responsive, avatar"%>
+						</td>
+					<%else  %>
+						<td colspan="5" class="text-center error_row">
 							<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
 								turn a face heel, or turn a heel face</p>
 							</td>
-						</tr>
-						<%end  %>
-						</tr>
-							<%unless @card.matches[2].heel.blank? || @card.matches[2].babyface.blank?  %>
-								<td class="avatar_cell_babyface">
-									<%=image_tag @card.matches[2].babyface.image.url, class: "img-responsive, avatar" %>
-								</td>
-								<td class="wrestler_name_babyface">
-									<h2 class="text-danger"><u><%=@card.matches[2].babyface.name %></u></h2>
-								</td>
-								<td class="vs">
-									<h2>         VS.       </h2>
-								</td>
-								<td class="wrestler_name_heel">
-									<h2 class="text-danger"><u><%=@card.matches[2].heel.name %></u></h2>
-								</td>
-								<td class="avatar_cell_heel">
-									<%=image_tag @card.matches[2].heel.image.url, class: "img-responsive, avatar"%>
-								</td>
-							<%else  %>
-							<tr>
-								<td colspan="5" class="text-center error_row">
-								<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
-									turn a face heel, or turn a heel face</p>
-								</td>
-							</tr>
-							<%end  %>
-							</tr>
-							<tr>
-								<tr>
-									<tr>
-										<td colspan="5" class="error_row">
-											<h2 class="text-center text-danger">
-												9:30 Intermission
-											</h2>
-										</td>
-									</tr>
-								<%unless @card.matches[3].heel.blank? || @card.matches[3].babyface.blank?  %>
-									<td class="avatar_cell_babyface">
-										<%=image_tag @card.matches[3].babyface.image.url, class: "img-responsive, avatar" %>
-									</td>
-									<td class="wrestler_name_babyface">
-										<h3 class="text-danger"><u><%=@card.matches[3].babyface.name %></u></h3>
-									</td>
-									<td class="vs">
-										<h2>         VS.       </h2>
-									</td>
-									<td class="wrestler_name_heel">
-										<h3 class="text-danger"><u><%=@card.matches[3].heel.name %></u></h3>
-									</td>
-									<td class="avatar_cell_heel">
-										<%=image_tag @card.matches[3].heel.image.url, class: "img-responsive, avatar"%>
-									</td>
-								<%else  %>
-								<tr>
-									<td colspan="5" class="text-center error_row">
-									<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
-										turn a face heel, or turn a heel face</p>
-									</td>
-								</tr>
-								<%end  %>
-								</tr>
-								<tr>
-									<%unless @card.matches[4].heel.blank? || @card.matches[4].babyface.blank?  %>
-										<td class="avatar_cell_babyface">
-											<%=image_tag @card.matches[4].babyface.image.url, class: "img-responsive, avatar" %>
-										</td>
-										<td class="wrestler_name_babyface">
-											<h3 class="text-danger"><u><%=@card.matches[4].babyface.name %></u></h3>
-										</td>
-										<td class="vs">
-											<h2>         VS.       </h2>
-										</td>
-										<td class="wrestler_name_heel">
-											<h3 class="text-danger"><u><%=@card.matches[4].heel.name %></u></h3>
-										</td>
-										<td class="avatar_cell_heel">
-											<%=image_tag @card.matches[4].heel.image.url, class: "img-responsive, avatar"%>
-										</td>
-									<%else  %>
-									<tr>
-										<td colspan="5" class="text-center error_row">
-										<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
-											turn a face heel, or turn a heel face</p>
-										</td>
-									</tr>
-									<%end  %>
-									</tr>
-										<%unless @card.matches[5].heel.blank? || @card.matches[5].babyface.blank?  %>
-											<td class="avatar_cell_babyface">
-												<%=image_tag @card.matches[5].babyface.image.url, class: "img-responsive, avatar" %>
-											</td>
-											<td class="wrestler_name_babyface">
-												<h4 class="text-danger"><u><%=@card.matches[5].babyface.name %></u></h4>
-											</td>
-											<td class="vs">
-												<h2>         VS.       </h2>
-											</td>
-											<td class="wrestler_name_heel">
-												<h4 class="text-danger"><u><%=@card.matches[5].heel.name %></u></h4>
-											</td>
-											<td class="avatar_cell_heel">
-												<%=image_tag @card.matches[5].heel.image.url, class: "img-responsive, avatar"%>
-											</td>
-										<%else  %>
-										<tr>
-											<td colspan="5" class="text-center error_row">
-											<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
-												turn a face heel, or turn a heel face</p>
-											</td>
-										</tr>
-										<%end  %>
-										</tr>
-										<tr>
-											<%unless @card.matches[6].heel.blank? || @card.matches[6].babyface.blank?  %>
-												<td class="avatar_cell_babyface">
-													<%=image_tag @card.matches[6].babyface.image.url, class: "img-responsive, avatar" %>
-												</td>
-												<td class="wrestler_name_babyface">
-													<h4 class="text-danger"><u><%=@card.matches[6].babyface.name %></u></h4>
-												</td>
-												<td class="vs">
-													<h2>         VS.       </h2>
-												</td>
-												<td class="wrestler_name_heel">
-													<h4 class="text-danger"><u><%=@card.matches[6].heel.name %></u></h4>
-												</td>
-												<td class="avatar_cell_heel">
-													<%=image_tag @card.matches[6].heel.image.url, class: "img-responsive, avatar"%>
-												</td>
-											<%else  %>
-											<tr>
-												<td colspan="5" class="text-center error_row">
-												<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
-													turn a face heel, or turn a heel face</p>
-												</td>
-											</tr>
-											<%end  %>
-											</tr>
-											<tr>
-												<tr>
-													<td colspan="5" class="error_row">
-														<h3 class="text-center text-danger">
-															Opening Match
-														</h3>
-													</td>
-												</tr>
-												<%unless @card.matches[7].heel.blank? || @card.matches[7].babyface.blank?  %>
-													<td class="avatar_cell_babyface">
-														<%=image_tag @card.matches[7].babyface.image.url, class: "img-responsive, avatar" %>
-													</td>
-													<td class="wrestler_name_babyface">
-														<h5 class="text-danger"><u><%=@card.matches[7].babyface.name %></u></h5>
-													</td>
-													<td class="vs">
-														<h2>         VS.       </h2>
-													</td>
-													<td class="wrestler_name_heel">
-														<h5 class="text-danger"><u><%=@card.matches[7].heel.name %></u></h5>
-													</td>
-													<td class="avatar_cell_heel">
-														<%=image_tag @card.matches[7].heel.image.url, class: "img-responsive, avatar"%>
-													</td>
-												<%else  %>
-												<tr>
-													<td colspan="5" class="text-center error_row">
-													<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
-														turn a face heel, or turn a heel face</p>
-													</td>
-												</tr>
-												<%end  %>
-												</tr>
-												<tr>
-													<td colspan="5" class="error_row">
-														<h1 class="text-center text-danger">
-															Doors Open at 6:00 | 7:30 Bell Time
-														</h1>
-													</td>
-												</tr>
+					<%end  %>
+				</tr>
+					<%unless @card.matches[2].heel.blank? || @card.matches[2].babyface.blank?  %>
+						<td class="avatar_cell_babyface">
+							<%=image_tag @card.matches[2].babyface.image.url, class: "img-responsive, avatar" %>
+						</td>
+						<td class="wrestler_name_babyface">
+							<h2 class="text-danger"><u><%=@card.matches[2].babyface.name %></u></h2>
+						</td>
+						<td class="vs">
+							<h2>         VS.       </h2>
+						</td>
+						<td class="wrestler_name_heel">
+							<h2 class="text-danger"><u><%=@card.matches[2].heel.name %></u></h2>
+						</td>
+						<td class="avatar_cell_heel">
+							<%=image_tag @card.matches[2].heel.image.url, class: "img-responsive, avatar"%>
+						</td>
+					<%else  %>
+						<td colspan="5" class="text-center error_row">
+							<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+								turn a face heel, or turn a heel face</p>
+						</td>
+					<%end  %>
+				</tr>
+				<tr class="high-card">
+					<td colspan="5" class="error_row">
+						<h2 class="text-center text-danger">
+							9:30 Intermission
+						</h2>
+					</td>
+				</tr>
+				<tr class="mid-card">
+					<%unless @card.matches[3].heel.blank? || @card.matches[3].babyface.blank?  %>
+						<td class="avatar_cell_babyface">
+							<%=image_tag @card.matches[3].babyface.image.url, class: "img-responsive, avatar" %>
+						</td>
+						<td class="wrestler_name_babyface">
+							<h3 class="text-danger"><u><%=@card.matches[3].babyface.name %></u></h3>
+						</td>
+						<td class="vs">
+							<h2>         VS.       </h2>
+						</td>
+						<td class="wrestler_name_heel">
+							<h3 class="text-danger"><u><%=@card.matches[3].heel.name %></u></h3>
+						</td>
+						<td class="avatar_cell_heel">
+							<%=image_tag @card.matches[3].heel.image.url, class: "img-responsive, avatar"%>
+						</td>
+					<%else  %>
+						<td colspan="5" class="text-center error_row">
+							<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+								turn a face heel, or turn a heel face</p>
+						</td>
+					<%end  %>
+				</tr>
+				<tr class="mid-card">
+					<%unless @card.matches[4].heel.blank? || @card.matches[4].babyface.blank?  %>
+						<td class="avatar_cell_babyface">
+							<%=image_tag @card.matches[4].babyface.image.url, class: "img-responsive, avatar" %>
+						</td>
+						<td class="wrestler_name_babyface">
+							<h3 class="text-danger"><u><%=@card.matches[4].babyface.name %></u></h3>
+						</td>
+						<td class="vs">
+							<h2>         VS.       </h2>
+						</td>
+						<td class="wrestler_name_heel">
+							<h3 class="text-danger"><u><%=@card.matches[4].heel.name %></u></h3>
+						</td>
+						<td class="avatar_cell_heel">
+							<%=image_tag @card.matches[4].heel.image.url, class: "img-responsive, avatar"%>
+						</td>
+					<%else  %>
+						<td colspan="5" class="text-center error_row">
+						<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+							turn a face heel, or turn a heel face</p>
+						</td>
+					<%end  %>
+				</tr>
+				<tr class="low-card">
+					<%unless @card.matches[5].heel.blank? || @card.matches[5].babyface.blank?  %>
+						<td class="avatar_cell_babyface">
+							<%=image_tag @card.matches[5].babyface.image.url, class: "img-responsive, avatar" %>
+						</td>
+						<td class="wrestler_name_babyface">
+							<h4 class="text-danger"><u><%=@card.matches[5].babyface.name %></u></h4>
+						</td>
+						<td class="vs">
+							<h2>         VS.       </h2>
+						</td>
+						<td class="wrestler_name_heel">
+							<h4 class="text-danger"><u><%=@card.matches[5].heel.name %></u></h4>
+						</td>
+						<td class="avatar_cell_heel">
+							<%=image_tag @card.matches[5].heel.image.url, class: "img-responsive, avatar"%>
+						</td>
+					<%else  %>
+						<td colspan="5" class="text-center error_row">
+						<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+							turn a face heel, or turn a heel face</p>
+						</td>
+					<%end  %>
+				<tr class="low-card">
+					<%unless @card.matches[6].heel.blank? || @card.matches[6].babyface.blank?  %>
+						<td class="avatar_cell_babyface">
+							<%=image_tag @card.matches[6].babyface.image.url, class: "img-responsive, avatar" %>
+						</td>
+						<td class="wrestler_name_babyface">
+							<h4 class="text-danger"><u><%=@card.matches[6].babyface.name %></u></h4>
+						</td>
+						<td class="vs">
+							<h2>         VS.       </h2>
+						</td>
+						<td class="wrestler_name_heel">
+							<h4 class="text-danger"><u><%=@card.matches[6].heel.name %></u></h4>
+						</td>
+						<td class="avatar_cell_heel">
+							<%=image_tag @card.matches[6].heel.image.url, class: "img-responsive, avatar"%>
+						</td>
+					<%else  %>
+						<td colspan="5" class="text-center error_row">
+						<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+							turn a face heel, or turn a heel face</p>
+						</td>
+					<%end  %>
+				</tr>
+				<tr class="undercard">
+					<td colspan="5" class="error_row">
+						<h3 class="text-center text-danger">
+							Opening Match
+						</h3>
+					</td>
+				</tr>
+				<tr class="undercard">
+					<%unless @card.matches[7].heel.blank? || @card.matches[7].babyface.blank?  %>
+						<td class="avatar_cell_babyface">
+							<%=image_tag @card.matches[7].babyface.image.url, class: "img-responsive, avatar" %>
+						</td>
+						<td class="wrestler_name_babyface">
+							<h5 class="text-danger"><u><%=@card.matches[7].babyface.name %></u></h5>
+						</td>
+						<td class="vs">
+							<h2>         VS.       </h2>
+						</td>
+						<td class="wrestler_name_heel">
+							<h5 class="text-danger"><u><%=@card.matches[7].heel.name %></u></h5>
+						</td>
+						<td class="avatar_cell_heel">
+							<%=image_tag @card.matches[7].heel.image.url, class: "img-responsive, avatar"%>
+						</td>
+					<%else  %>
+						<td colspan="5" class="text-center error_row">
+						<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+							turn a face heel, or turn a heel face</p>
+						</td>
+					<%end  %>
+				</tr>
+				<tr class="opening">
+					<td colspan="5" class="error_row">
+						<h1 class="text-center text-danger">
+							Doors Open at 6:00 | 7:30 Bell Time
+						</h1>
+					</td>
+				</tr>
 			</tbody>
 		</table>
 					</div>
