--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -31,7 +31,7 @@
 
 				<p>He tweets at <%=link_to '@utumno86', 'https://twitter.com/utumno86'  %></p>
 
-				<p>His profile is available at Github <%=link_to 'here', 'http://utumno86.github.io/'  %></p>
+				<p>His portfolio is available at Github <%=link_to 'here', 'http://utumno86.github.io/'  %></p>
 			</div>
 		</div>
 	</div>
