--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,8 @@
             Logo courtesy of fellow Iron Yard graduate <%= link_to 'Derek Dyer', ('https://github.com/digitaldrk')  %><br>
 					Copyright &copy; Michael E. Nash (許書聖） 2015 <br>
 					Would you like to learn more <%= link_to 'About', page_path('about') %> Cream of the Crop and its
-						author?
+						author?<br>
+            <%= link_to 'Generate Show!', shows_path %>
           </p>
 				</div>
 			</div>
