--- a/app/views/wrestlers/index.slim
+++ b/app/views/wrestlers/index.slim
@@ -11,16 +11,24 @@
 							= current_user.promotion
 							|     Roster
 						- else
-							h1 Roster
+							| Roster
 				hr
-<div class="row">
-	<div class="box">
-		<div class="col-lg-12">
-			<hr>
-			<h2 class="text-center">
-				<strong>Your Wrestlers in the Main Event! </h2></strong>
-				<h3 class ="intro-text text-center"><u>Babyfaces (Tecnicos)</u> </h3>
-			<%unless @main_event_babyfaces.blank?  %>
+	- (0..4).each do |position|
+		.row
+			.box
+				.col-lg-12
+					hr
+					.text-center
+						h2
+							strong
+								| Your Wrestlers in the #{@positions[position]}!
+						- (0..1).each do |alignment|
+							- index = (position*2 + alignment)
+							.intro-text
+								h3
+									u
+										=@alignments[alignment]
+							- unless @main_event_babyfaces.blank?
 			<% @main_event_babyfaces.each do |wrestler|  %>
 					<div class="col-sm-4 text-center">
 						<%=image_tag wrestler.image.url, class: "img-responsive"  %>
